tests/fixtures/invalid/const_typedef_alias_assignment.c
typedef const int ConstInt;

int main(void) {
    ConstInt value = 1;
    value = 3;
    return value;
}
